{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 25,
  "lineage": "7a197e61-3f36-dde0-1f97-a80d37a8eb19",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "portfolio",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a9f35379e227b94c",
            "arn": "arn:aws:ec2:us-east-1:REDACTED_ACCOUNT_ID:elastic-ip/eipalloc-0a9f35379e227b94c",
            "association_id": "eipassoc-0dea32a62b5ed7319",
            "domain": "vpc",
            "id": "eipalloc-0a9f35379e227b94c",
            "instance": "i-0c2facc022fa70fe8",
            "network_border_group": "us-east-1",
            "network_interface": "eni-082ea3bcc535f4bff",
            "private_dns": "ip-10-0-1-159.ec2.internal",
            "private_ip": "10.0.1.159",
            "public_dns": "ec2-44-213-26-169.compute-1.amazonaws.com",
            "public_ip": "44.213.26.169",
            "public_ipv4_pool": "amazon",
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Project": "portfolio"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ecr_repository.portfolio",
            "aws_iam_instance_profile.portfolio",
            "aws_iam_role.ec2_portfolio",
            "aws_instance.portfolio",
            "aws_security_group.portfolio",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "portfolio",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0aae19d30bab785d3",
            "arn": "arn:aws:ec2:us-east-1:REDACTED_ACCOUNT_ID:instance/i-0c2facc022fa70fe8",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "portfolio-instance-profile",
            "id": "i-0c2facc022fa70fe8",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.nano",
            "ipv6_address_count": 0,
            "key_name": "portfolio-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-082ea3bcc535f4bff",
            "private_dns": "ip-10-0-1-159.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.159",
            "public_dns": "ec2-44-213-26-169.compute-1.amazonaws.com",
            "public_ip": "44.213.26.169",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-east-1:REDACTED_ACCOUNT_ID:key/1fcc6cc1-6b90-43d7-a42c-603cb57841e6",
                "tags_all": {
                  "Environment": "production",
                  "ManagedBy": "terraform",
                  "Project": "portfolio"
                },
                "throughput": 125,
                "volume_id": "vol-06bfec835e04e01d5",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a0aa338f1766afed",
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Project": "portfolio"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0464533bd4d832e6b"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_ecr_repository.portfolio",
            "aws_iam_instance_profile.portfolio",
            "aws_iam_role.ec2_portfolio",
            "aws_security_group.portfolio",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:REDACTED_ACCOUNT_ID:internet-gateway/igw-0749847750016637a",
            "id": "igw-0749847750016637a",
            "owner_id": "REDACTED_ACCOUNT_ID",
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Project": "portfolio"
            },
            "vpc_id": "vpc-0bd8dcdc501342929"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:REDACTED_ACCOUNT_ID:route-table/rtb-044ad01df75b08ae9",
            "id": "rtb-044ad01df75b08ae9",
            "owner_id": "REDACTED_ACCOUNT_ID",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0749847750016637a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Project": "portfolio"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bd8dcdc501342929"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0afe12dbd461a78ee",
            "route_table_id": "rtb-044ad01df75b08ae9",
            "subnet_id": "subnet-0a0aa338f1766afed"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "portfolio",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:REDACTED_ACCOUNT_ID:security-group/sg-0464533bd4d832e6b",
            "description": "Portfolio website security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0464533bd4d832e6b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "REDACTED_IP/32"
                ],
                "description": "SSH (restricted)",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "portfolio-sg",
            "name_prefix": "",
            "owner_id": "REDACTED_ACCOUNT_ID",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Project": "portfolio"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bd8dcdc501342929"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "ingress"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:REDACTED_ACCOUNT_ID:subnet/subnet-0a0aa338f1766afed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a0aa338f1766afed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "REDACTED_ACCOUNT_ID",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Project": "portfolio"
            },
            "vpc_id": "vpc-0bd8dcdc501342929"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:REDACTED_ACCOUNT_ID:vpc/vpc-0bd8dcdc501342929",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05caca6e37e2c470d",
            "default_route_table_id": "rtb-09bda36979d1dc87a",
            "default_security_group_id": "sg-0d1b4f9daea4ec456",
            "dhcp_options_id": "dopt-0ecd9b49532b07686",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bd8dcdc501342929",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09bda36979d1dc87a",
            "owner_id": "REDACTED_ACCOUNT_ID",
            "tags_all": {
              "Environment": "production",
              "ManagedBy": "terraform",
              "Project": "portfolio"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}